--- a/pages/myProblems/problem.css
+++ b/pages/myProblems/problem.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: RobotoRegular;
+  src: url(../fonts/Roboto-Regular.woff);
+}
+body {
+  font-family: RobotoRegular, sans-serif !important;
+  font-size: 14px !important;
+}
 .problem {
   color: rgba(0, 0, 0, 0.3);
   margin-top: 12%;
@@ -7,14 +15,14 @@
 .problem img {
   width: 37.34375vw;
 }
-.page-problems .ppl {
+.ppl {
   padding: 15px 0 0 10px;
 }
-.page-problems .ppl:hover{
+.ppl:hover{
   box-shadow: 0 6px 12px rgb(0 0 0 / 16%);
 }
 @media (max-width: 767px) {
-  .page-problems .ppl {
+  .ppl {
     padding: 15px 0 10px 10px;
     border-top: 1px solid #F1F1F3;
   }
