--- a/pages/myProblems/problemModel.css
+++ b/pages/myProblems/problemModel.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: RobotoRegular;
+  src: url(../fonts/Roboto-Regular.woff);
+}
+body {
+  font-family: RobotoRegular, sans-serif !important;
+  font-size: 14px !important;
+}
 .image-container {
   position: relative;
 }
@@ -72,6 +80,7 @@
 }
 .mysolutions-page .data-section button {
   margin-right: 10px;
+  font-family: RobotoRegular, sans-serif !important;
 }
 .mysolutions-page .data-section button img {
   width: 20px;
@@ -101,11 +110,20 @@
 .mysolutions-page .review-block-description {
   margin-bottom: 20px;
 }
+.ppl {
+  padding: 15px 0 0 10px;
+}
+.ppl:hover{
+  box-shadow: 0 6px 12px rgb(0 0 0 / 16%);
+}
 @media (max-width: 767px) {
   .mysolutions-page .attachments .attachments-thumbnail {
     width: 70px;
     float: left;
   }
+  .ppl {
+    padding: 15px 0 10px 10px;
+  }  
 }
 
 
