--- a/pages/mycafila/mycafila.css
+++ b/pages/mycafila/mycafila.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: RobotoRegular;
+  src: url(../fonts/Roboto-Regular.woff);
+}
+body {
+  font-family: RobotoRegular, sans-serif !important;
+  font-size: 14px !important;
+}
 .cafila-btn {
   border: none;
   color: #616161;
