--- a/pages/beMyMentor/beMyMentor.css
+++ b/pages/beMyMentor/beMyMentor.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: RobotoRegular;
+  src: url(../fonts/Roboto-Regular.woff);
+}
+body {
+  font-family: RobotoRegular, sans-serif !important;
+  font-size: 14px !important;
+}
 .problem {
   color: rgba(0, 0, 0, 0.3);
   margin-top: 12%;
@@ -73,7 +81,7 @@ margin: 4px;
 .ignore a {
   float: left;
   background: #fff;
-  color: #616161;
+  color: #039BE5;
   font-size: calc(1rem + ((1vw - 13.6px) * 0.8929));
   font-family: 'Roboto', sans-serif;
   text-decoration: none;
@@ -82,6 +90,7 @@ margin: 4px;
   text-align: center;
   border-radius: 5px;
   box-shadow: 0px 2px 8px rgb(0 0 0 / 24%);
+  border: 1px solid #039BE5;
 }
 .viewPost a {
   float: left;
@@ -111,4 +120,28 @@ a {
  padding-left: 15%;
   margin: 0;
   cursor: pointer;
+}
+@media (max-width: 767px) {
+  .feedSec h4 {
+    line-height: 1.2;
+    font-size: 18px;
+    padding-left: 0;
+  }
+  .feedCnt p {
+    line-height: 1.2;
+    font-size: 14px;
+  }
+  .feedPhoto {
+    width: 20%;
+  }
+  .viewProfile {
+    font-size: 12px;
+  }
+  .viewPost a, .ignore a {
+    font-size: 16px;
+    line-height: 16px;
+    width: auto;
+    padding: 10px 30px;
+    margin-bottom: 10px;
+  }
 }
