--- a/pages/myProblems/mysolution.css
+++ b/pages/myProblems/mysolution.css
@@ -114,6 +114,9 @@ h2 {
 .ppl:hover {
   box-shadow: 0 6px 12px rgb(0 0 0 / 16%);
 }
+.review-block .close-icon .fa-window-close {
+  color: red;
+}
 @media (max-width: 767px) {
   .ppl {
     padding: 15px 0 10px 10px;
