--- a/pages/mycafila/mycafila.css
+++ b/pages/mycafila/mycafila.css
@@ -60,8 +60,18 @@ body {
   margin-top: 15px;
 }
 .create-mycafila .modal-footer .btn-primary{
-  background-color: rgb(241, 196, 15);
-  border-color: rgb(241, 196, 15);
+  background-color: #039be5;
+  border-color: #039be5;
+}
+.create-mycafila .modal-footer .btn-secondary{
+  background-color: #fff;
+  border-color: #039be5;
+  color: #039be5;
+}
+.create-mycafila .modal-footer .btn-secondary:hover {
+  background-color: #039be5;
+  border-color: #039be5;
+  color: #fff;
 }
 @media (max-width: 767px) {
   .msgsection.chat {
@@ -75,6 +85,18 @@ body {
     right: inherit !important;
     top: 25px !important;
     position: absolute;
+  }
+  .plusign {
+    width: 24px;
+    height: 24px;
+    background-size: 100%;
+    right: -22px;
+  }
+  .addcflphoto {
+    background-size: 100%;
+    background-color: #fff;
+    width: 48px;
+    height: 48px;
   }
 }
 @media (min-width: 768px) {
