--- a/pages/network/network.css
+++ b/pages/network/network.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: RobotoRegular;
+  src: url(../..//fonts/Roboto-Regular.woff);
+}
+@font-face {
+  font-family: RobotoBold;
+  src: url(../../fonts/Roboto-Bold.woff);
+}
+body {
+  font-family: RobotoRegular, sans-serif !important;
+  font-size: 14px !important;
+}
 /* .problem {
     color: rgba(0, 0, 0, 0.3);
     margin-top: 12%;
@@ -267,4 +279,18 @@ video {
 a:hover,
 a:active {
   outline: 0;
+}
+@media (max-width: 767px) {
+.responsive-table {
+  overflow: scroll;
+}
+.mentorList li {
+  font-size: 12px;
+}
+.mentorList li.active a {
+  border-bottom: 2px solid #039be5;
+}
+.mentorList li.active span {
+  display: none;
+}
 }
