--- a/pages/newConnections/newConnections.css
+++ b/pages/newConnections/newConnections.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: RobotoRegular;
+    src: url(../..//fonts/Roboto-Regular.woff);
+  }
+  @font-face {
+    font-family: RobotoBold;
+    src: url(../../fonts/Roboto-Bold.woff);
+  }
+  body {
+    font-family: RobotoRegular, sans-serif !important;
+    font-size: 14px !important;
+  }
 .problem {
     color: rgba(0, 0, 0, 0.3);
     margin-top: 12%;
@@ -39,7 +51,6 @@
     width: 79.4%;
     line-height: 2.083333333333333vw;
     font-weight: normal;
-    font-family: 'MontserratRegular';
     padding: 2.604166666666667vw 0 0;
     margin: 0 auto;
 }
@@ -91,4 +102,60 @@ img, object, embed, video {
     color: #000;
     font-family: 'Roboto', sans-serif;
     text-align: center;
+}
+.new-connections .btn-primary {
+    background-color: #039be5;
+    border-color: #039be5;
+}
+.new-connections .btn-outline-primary {
+    border-color: #039be5;
+}
+.new-connections .btn-outline-primary:hover {
+    background-color: #039be5;
+}
+.evrKnow {
+
+}
+@media (max-width: 767px) {
+    .res-img {
+        width: 15%;
+        max-width: 15%;
+    }
+    .res-desp {
+        width: 80%;
+        max-width: 80%;
+    }
+    .new-connections .pplMsg {
+        margin-bottom: 20px !important;
+        padding-bottom: 20px;
+    }
+    .new-connections .pplMsg col-md-5 {
+        margin-top: 20px;
+    }
+    .evrKnow h4 {
+        font-size: 24px;
+        line-height: 1.2;
+        margin: 0;
+    }
+    .evrKnow h5 {
+        font-size: 18px;
+        line-height: 1.2;
+        margin: 10px 0 10px;
+    }
+    .evrKnow ul {
+        margin: 10px 0 20px;
+    }
+    .evrKnow ul li {
+        width: 35%;
+        margin-right: 20px;
+        margin-bottom: 20px;
+    }
+    .evrKnow ul li .cumName {
+        line-height: 1.2;
+        font-size: 14px;
+    }
+    .evrKnow ul li .cumposition {
+        line-height: 1.2;
+        font-size: 12px;
+    }
 }
