--- a/pages/problemRequest/problemRequest.css
+++ b/pages/problemRequest/problemRequest.css
@@ -90,6 +90,8 @@ body {
   box-shadow: 0 2px 2px rgb(0 0 0 / 28%);
   margin-top: 20px;
   margin-bottom: 20px;
+  background-color: #039be5;
+  border-color: #039be5;
 }
 .user-avtar-details .container {
   padding-left: 0;
@@ -126,6 +128,21 @@ body {
 }
 .multi-screen-level .solution-dp {
   max-width: 12%;
+}
+.image-panel .img-container {
+  float: left;
+  margin-right: 10px;
+  padding: 0;
+}
+.image-panel {
+  display: inline-block;
+  width: 100%;
+  margin: 20px 0 0;
+}
+.navigation-btn .btn-circle {
+  background-color: #039be5;
+  border-color: #039be5;
+  color: #fff;
 }
 @media (max-width: 767px) {
   .user-avtar-details button {
