--- a/scss/parts/adminlte.core.css
+++ b/scss/parts/adminlte.core.css
@@ -12775,9 +12775,9 @@ body:not(.layout-fixed) .main-sidebar {
   top: 0;
 }
 
-body:not(.layout-fixed) .main-sidebar .sidebar {
+/* body:not(.layout-fixed) .main-sidebar .sidebar {
   overflow-y: auto;
-}
+} */
 
 .layout-fixed .brand-link {
   width: 250px;
