--- a/scss/_main-sidebar.scss
+++ b/scss/_main-sidebar.scss
@@ -14,13 +14,14 @@
       outline: none;
     }
   }
-
 }
 
 .sidebar {
-  height: calc(100% - (#{$main-header-height-inner} + #{$main-header-bottom-border-width}));
+  height: calc(
+    100% - (#{$main-header-height-inner} + #{$main-header-bottom-border-width})
+  );
   overflow-x: none;
-  overflow-y: initial;
+  overflow-y: none !important;
   padding-bottom: $sidebar-padding-y;
   padding-left: $sidebar-padding-x;
   padding-right: $sidebar-padding-x;
@@ -48,7 +49,7 @@
 
   .image {
     display: inline-block;
-    padding-left: $nav-link-padding-x - .2;
+    padding-left: $nav-link-padding-x - 0.2;
   }
 
   img {
@@ -72,7 +73,7 @@
   // All levels
   .nav-item {
     > .nav-link {
-      margin-bottom: .2rem;
+      margin-bottom: 0.2rem;
 
       .right {
         @include transition(transform $transition-fn $transition-speed);
@@ -84,11 +85,11 @@
   .nav-link > p > .right {
     position: absolute;
     right: 1rem;
-    top: .7rem;
+    top: 0.7rem;
 
     i,
     span {
-      margin-left: .5rem;
+      margin-left: 0.5rem;
     }
 
     &:nth-child(2) {
@@ -116,9 +117,9 @@
     margin-bottom: 0;
 
     .nav-icon {
-      margin-left: .05rem;
+      margin-left: 0.05rem;
       font-size: 1.2rem;
-      margin-right: .2rem;
+      margin-right: 0.2rem;
       text-align: center;
       width: $sidebar-nav-icon-width;
 
@@ -160,7 +161,7 @@
       padding-left: 1rem;
 
       .text-sm & {
-        padding-left: .5rem;
+        padding-left: 0.5rem;
       }
     }
 
@@ -172,7 +173,7 @@
 
           .text-sm & {
             padding-left: 1rem;
-            margin-left: -.5rem;
+            margin-left: -0.5rem;
           }
         }
       }
@@ -180,11 +181,11 @@
   }
 
   .nav-header {
-    font-size: .9rem;
+    font-size: 0.9rem;
     padding: $nav-link-padding-y;
 
     &:not(:first-of-type) {
-      padding: 1.7rem 1rem .5rem;
+      padding: 1.7rem 1rem 0.5rem;
     }
   }
 
@@ -210,7 +211,7 @@
     }
   }
 
-  background-color: rgba($black, .1);
+  background-color: rgba($black, 0.1);
   bottom: 0;
   display: none;
   left: 0;
@@ -243,7 +244,7 @@
     }
 
     .dropdown-menu {
-      @include box-shadow(0 2px 4px rgba(0, 0, 0, .4));
+      @include box-shadow(0 2px 4px rgba(0, 0, 0, 0.4));
       border-color: darken($sidebar-light-hover-bg, 5%);
     }
 
@@ -366,7 +367,7 @@
     }
 
     .dropdown-menu {
-      @include box-shadow(0 2px 4px rgba(0, 0, 0, .4));
+      @include box-shadow(0 2px 4px rgba(0, 0, 0, 0.4));
       border-color: darken($sidebar-dark-hover-bg, 5%);
     }
 
@@ -388,7 +389,7 @@
     // Hover and active states
     &.menu-open > .nav-link,
     &:hover > .nav-link,
-    > .nav-link:focus  {
+    > .nav-link:focus {
       background-color: $sidebar-dark-hover-bg;
       color: $sidebar-dark-hover-color;
     }
@@ -496,7 +497,7 @@
 .sidebar-mini-xs .main-sidebar.sidebar-focused {
   .nav-compact.nav-sidebar.nav-child-indent:not(.nav-flat) .nav-treeview {
     padding-left: 1rem;
-    margin-left: -.5rem;
+    margin-left: -0.5rem;
   }
 }
 
@@ -510,7 +511,7 @@
       margin-bottom: 0;
 
       > .nav-icon {
-        margin-left: .55rem;
+        margin-left: 0.55rem;
       }
     }
   }
@@ -520,7 +521,7 @@
       .nav-item {
         > .nav-link {
           > .nav-icon {
-            margin-left: .4rem;
+            margin-left: 0.4rem;
           }
         }
       }
@@ -532,11 +533,11 @@
       padding-left: 0;
 
       .nav-icon {
-        margin-left: .85rem;
+        margin-left: 0.85rem;
       }
 
       .nav-treeview {
-        border-left: .2rem solid;
+        border-left: 0.2rem solid;
 
         .nav-icon {
           margin-left: 1.15rem;
@@ -566,31 +567,31 @@
   .sidebar-collapse &.nav-child-indent {
     .nav-treeview {
       .nav-icon {
-        margin-left: .55rem;
+        margin-left: 0.55rem;
       }
 
       .nav-link {
-        padding-left: calc(#{$nav-link-padding-x} - .2rem);
+        padding-left: calc(#{$nav-link-padding-x} - 0.2rem);
       }
 
       .nav-treeview {
         .nav-icon {
-          margin-left: .35rem;
+          margin-left: 0.35rem;
         }
 
         .nav-treeview {
           .nav-icon {
-            margin-left: .15rem;
+            margin-left: 0.15rem;
           }
 
           .nav-treeview {
             .nav-icon {
-              margin-left: -.15rem;
+              margin-left: -0.15rem;
             }
 
             .nav-treeview {
               .nav-icon {
-                margin-left: -.35rem;
+                margin-left: -0.35rem;
               }
             }
           }
@@ -607,13 +608,13 @@
   .sidebar-mini-xs .main-sidebar.sidebar-focused & {
     &.nav-compact.nav-sidebar .nav-treeview {
       .nav-icon {
-        margin-left: .4rem;
+        margin-left: 0.4rem;
       }
     }
 
     &.nav-sidebar.nav-child-indent .nav-treeview {
       .nav-icon {
-        margin-left: .85rem;
+        margin-left: 0.85rem;
       }
 
       .nav-treeview {
@@ -648,18 +649,18 @@
 
   .nav-treeview {
     .nav-icon {
-      margin-left: -.2rem;
+      margin-left: -0.2rem;
     }
   }
 
   &.nav-sidebar > .nav-item {
     .nav-treeview,
     > .nav-treeview {
-      background-color: rgba($white, .05);
+      background-color: rgba($white, 0.05);
 
       .nav-item {
         > .nav-link {
-          border-left: .2rem solid;
+          border-left: 0.2rem solid;
         }
       }
     }
@@ -675,10 +676,10 @@
       margin-bottom: 0;
 
       > .nav-icon {
-        margin-left: .55rem;
+        margin-left: 0.55rem;
 
         .text-sm & {
-          margin-left: .75rem;
+          margin-left: 0.75rem;
         }
       }
     }
@@ -692,10 +693,10 @@
         box-shadow: none;
 
         > .nav-icon {
-          margin-left: calc(.55rem - 3px);
+          margin-left: calc(0.55rem - 3px);
 
           .text-sm & {
-            margin-left: calc(.75rem - 3px);
+            margin-left: calc(0.75rem - 3px);
           }
         }
       }
@@ -706,7 +707,7 @@
     .nav-item {
       > .nav-link {
         > .nav-icon {
-          margin-left: calc(.75rem - 3px);
+          margin-left: calc(0.75rem - 3px);
         }
       }
     }
@@ -718,17 +719,22 @@
     > .nav-item .nav-link {
       .nav-icon {
         @include transition(margin-left $transition-fn $transition-speed);
-        margin-left: .6rem;
-
+        margin-left: 0.6rem;
       }
     }
   }
 
-  .sidebar-mini.sidebar-collapse .main-sidebar.sidebar-focused &.nav-child-indent,
+  .sidebar-mini.sidebar-collapse
+    .main-sidebar.sidebar-focused
+    &.nav-child-indent,
   .sidebar-mini.sidebar-collapse .main-sidebar:hover &.nav-child-indent,
-  .sidebar-mini-md.sidebar-collapse .main-sidebar.sidebar-focused &.nav-child-indent,
+  .sidebar-mini-md.sidebar-collapse
+    .main-sidebar.sidebar-focused
+    &.nav-child-indent,
   .sidebar-mini-md.sidebar-collapse .main-sidebar:hover &.nav-child-indent,
-  .sidebar-mini-xs.sidebar-collapse .main-sidebar.sidebar-focused &.nav-child-indent,
+  .sidebar-mini-xs.sidebar-collapse
+    .main-sidebar.sidebar-focused
+    &.nav-child-indent,
   .sidebar-mini-xs.sidebar-collapse .main-sidebar:hover &.nav-child-indent {
     .nav-treeview {
       padding-left: 1rem;
@@ -740,18 +746,28 @@
     }
   }
 
-  .sidebar-mini.sidebar-collapse.text-sm .main-sidebar.sidebar-focused &.nav-child-indent,
+  .sidebar-mini.sidebar-collapse.text-sm
+    .main-sidebar.sidebar-focused
+    &.nav-child-indent,
   .sidebar-mini.sidebar-collapse.text-sm .main-sidebar:hover &.nav-child-indent,
-  .sidebar-mini-md.sidebar-collapse.text-sm .main-sidebar.sidebar-focused &.nav-child-indent,
-  .sidebar-mini-md.sidebar-collapse.text-sm .main-sidebar:hover &.nav-child-indent,
-  .sidebar-mini-xs.sidebar-collapse.text-sm .main-sidebar.sidebar-focused &.nav-child-indent,
-  .sidebar-mini-xs.sidebar-collapse.text-sm .main-sidebar:hover &.nav-child-indent {
+  .sidebar-mini-md.sidebar-collapse.text-sm
+    .main-sidebar.sidebar-focused
+    &.nav-child-indent,
+  .sidebar-mini-md.sidebar-collapse.text-sm
+    .main-sidebar:hover
+    &.nav-child-indent,
+  .sidebar-mini-xs.sidebar-collapse.text-sm
+    .main-sidebar.sidebar-focused
+    &.nav-child-indent,
+  .sidebar-mini-xs.sidebar-collapse.text-sm
+    .main-sidebar:hover
+    &.nav-child-indent {
     .nav-treeview {
-      padding-left: .5rem;
+      padding-left: 0.5rem;
 
       .nav-treeview {
         padding-left: 1rem;
-        margin-left: -.5rem;
+        margin-left: -0.5rem;
       }
     }
   }
@@ -761,12 +777,12 @@
   .sidebar-mini-xs.sidebar-collapse & {
     > .nav-item > .nav-link {
       .nav-icon {
-        margin-left: .55rem;
+        margin-left: 0.55rem;
       }
 
       &.active {
-        > .nav-icon{
-          margin-left: .36rem;
+        > .nav-icon {
+          margin-left: 0.36rem;
         }
       }
     }
@@ -781,18 +797,17 @@
     }
   }
 
-
   .sidebar-mini.sidebar-collapse.text-sm &,
   .sidebar-mini-md.sidebar-collapse.text-sm &,
   .sidebar-mini-xs.sidebar-collapse.text-sm & {
     > .nav-item > .nav-link {
       .nav-icon {
-        margin-left: .75rem;
+        margin-left: 0.75rem;
       }
 
       &.active {
-        > .nav-icon{
-          margin-left: calc(.75rem - 3px);
+        > .nav-icon {
+          margin-left: calc(0.75rem - 3px);
         }
       }
     }
@@ -802,7 +817,7 @@
     &.nav-sidebar > .nav-item {
       .nav-treeview,
       > .nav-treeview {
-        background-color: rgba($white, .05);
+        background-color: rgba($white, 0.05);
       }
 
       > .nav-link.active {
@@ -824,7 +839,7 @@
     &.nav-sidebar > .nav-item {
       .nav-treeview,
       > .nav-treeview {
-        background-color: rgba($black, .05);
+        background-color: rgba($black, 0.05);
       }
 
       > .nav-link.active {
@@ -842,7 +857,6 @@
     }
   }
 }
-
 
 .nav-collapse-hide-child {
   .menu-open > .nav-treeview {
@@ -864,9 +878,13 @@
   .sidebar-mini.sidebar-collapse .main-sidebar.sidebar-focused &,
   .sidebar-mini.sidebar-collapse .main-sidebar:not(.sidebar-no-expand):hover &,
   .sidebar-mini-md.sidebar-collapse .main-sidebar.sidebar-focused &,
-  .sidebar-mini-md.sidebar-collapse .main-sidebar:not(.sidebar-no-expand):hover &,
+  .sidebar-mini-md.sidebar-collapse
+    .main-sidebar:not(.sidebar-no-expand):hover
+    &,
   .sidebar-mini-xs.sidebar-collapse .main-sidebar.sidebar-focused &,
-  .sidebar-mini-xs.sidebar-collapse .main-sidebar:not(.sidebar-no-expand):hover & {
+  .sidebar-mini-xs.sidebar-collapse
+    .main-sidebar:not(.sidebar-no-expand):hover
+    & {
     .menu-open > .nav-treeview {
       max-height: min-content;
       animation-name: fadeIn;
@@ -891,13 +909,13 @@
 
   .nav-link > .right,
   .nav-link > p > .right {
-    top: .465rem;
+    top: 0.465rem;
   }
 
   .text-sm & {
     .nav-link > .right,
     .nav-link > p > .right {
-      top: .7rem;
+      top: 0.7rem;
     }
   }
 }
@@ -987,7 +1005,7 @@
   flex-wrap: nowrap;
 }
 .sidebar nav .form-inline {
-  margin-bottom: .2rem;
+  margin-bottom: 0.2rem;
 }
 
 // Sidebar Collapse on Layout Boxed
@@ -1040,7 +1058,7 @@
   }
 
   .search-title {
-    margin-bottom: -.1rem;
+    margin-bottom: -0.1rem;
   }
 
   .list-group {
@@ -1104,7 +1122,12 @@
 
   .main-sidebar-custom {
     .sidebar {
-      height: calc(100% - ((#{$main-header-height-inner} + #{$sidebar-custom-height}) + #{$main-header-bottom-border-width}));
+      height: calc(
+        100% -
+          (
+            (#{$main-header-height-inner} + #{$sidebar-custom-height}) + #{$main-header-bottom-border-width}
+          )
+      );
     }
 
     .sidebar-custom {
@@ -1115,7 +1138,12 @@
 
   .main-sidebar-custom-lg {
     .sidebar {
-      height: calc(100% - ((#{$main-header-height-inner} + #{$sidebar-custom-height-lg}) + #{$main-header-bottom-border-width}));
+      height: calc(
+        100% -
+          (
+            (#{$main-header-height-inner} + #{$sidebar-custom-height-lg}) + #{$main-header-bottom-border-width}
+          )
+      );
     }
 
     .sidebar-custom {
@@ -1125,7 +1153,12 @@
 
   .main-sidebar-custom-xl {
     .sidebar {
-      height: calc(100% - ((#{$main-header-height-inner} + #{$sidebar-custom-height-xl}) + #{$main-header-bottom-border-width}));
+      height: calc(
+        100% -
+          (
+            (#{$main-header-height-inner} + #{$sidebar-custom-height-xl}) + #{$main-header-bottom-border-width}
+          )
+      );
     }
 
     .sidebar-custom {
@@ -1138,7 +1171,7 @@
   .main-sidebar-custom-xl {
     .pos-right {
       position: absolute;
-      right: .5rem;
+      right: 0.5rem;
     }
   }
 }
