--- a/pages/editProfile/editprofile.css
+++ b/pages/editProfile/editprofile.css
@@ -18,6 +18,29 @@
   font-family: "RobotoBold";
   color: #707070;
 }
+.workexperience-title{
+  font-size: calc(1.125rem + ((1vw - 13.6px) * 1.0714));
+  line-height: 1.5104166666666667;
+  font-weight: 400;
+  font-family: "RobotoBold";
+  color: #707070;
+}
+.textareacontent{
+  padding: 5px 2%;
+    margin: -11px 0 20px;
+    font-family: Roboto,sans-serif;
+    font-size: calc(.75rem + ((1vw - 13.6px) * .3571));
+    color: #666;
+    border: 0;
+    height: 7.8125vw;
+    width: 100%;
+    background: #fbfbfb;
+    float: left;
+    resize: none;
+    border-radius: 5px;
+}
+
+
 .degree-input label {
   color: #616161;
   font-family: "RobotoRegular";
@@ -155,20 +178,7 @@
   border: none;
 }
 
-/* .saveBtn {
-  line-height: 2.5vw;
-  padding: 0 0 0 3.4895833333333335vw;
-  margin: 0;
-  text-align: left;
-  width: 9.166666666666666vw;
-  border-radius: 1.25vw;
-  font-size: calc(1rem + ((1vw - 13.6px) * .8929));
-  color: #fff;
-  font-family: Roboto,sans-serif;
-  background: url(../../images/saveBtn.33fc7b5f91c8d6406ad1.png) .9375vw center no-repeat #28b5f4;
-  box-shadow: 0 2px 8px rgb(0 0 0 / 24%);
-  margin-left: 25%;
-} */
+
 @media only screen and (max-width: 600px) {
   .superimg {
     max-width: 30%;
@@ -190,44 +200,7 @@
   src: url(../../fonts/Roboto-Medium.woff);
 }
 
-/* .banner_blk {
-  padding: 0;
-  box-shadow: 0px -1px 11px #666;
-  width: 100%;
-  overflow: hidden;
-  background: #fafafa;
-}  */
-/* .avatar-wrapper {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  margin: 0px auto;
-  box-shadow: 0 8px 16px rgb(0 0 0 / 16%);
-  transition: all 0.3s ease;
-}
-.banner_blk img {
-  width: 100%;
-  height: 100%;
-}
-.wrapper1 {
-  padding: 0;
-  margin: 0px auto;
-  width: 73.125vw;
-  position: relative;
-  clear: both;
-}
-.left_profile {
-  padding: 0;
-  margin: 0;
-  position: absolute;
-  top: -10.416666666666668vw;
-  width: 13.541666666666666vw;
-  background-color: #fff;
-  padding-top: 0;
-  height: 13.541666666666666vw;
-  left: 2.1875vw;
-  z-index: 3;
-}*/
+
 .tab-content .active {
   background: white !important;
   border-left: none;
@@ -253,9 +226,7 @@
 }
 .name_year {
   font-size: calc(1.125rem + ((1vw - 13.6px) * 1.0714));
-
   font-weight: normal;
-
   line-height: 1.5625vw;
 }
 
@@ -391,10 +362,7 @@
 }
 
 .home-tab .form-group input {
-  /* font-family: 'RobotoMedium'; */
   color: #616161;
-  /* box-shadow: 0 1px 4px #616161; */
-
   height: 2.396vw;
   font-size: calc(0.875rem + ((1vw - 13.6px) * 0.3571));
 }
@@ -446,92 +414,6 @@
   border-top: 0;
   box-sizing: border-box;
 }
-/*
-.Achi_memery {
-  padding: 0;
-  margin: 0px auto;
-  width: 81.1%;
-}
-
-.Achive_img {
-  padding: 0.5208333333333333vw 0 0;
-  margin: 0;
-  float: right;
-  width: 39.54%;
-}
-.Achive_img img {
-  width: 100%;
-}
-.attch_achivement {
-  padding: 1.5625vw 0 0;
-  margin: 0 auto;
-  width: 72.8%;
-  position: relative;
-  clear: both;
-}
-.attFile {
-  padding: 2.083333333333333vw 0 0;
-  clear: both;
-}
-.upFile {
-  width: 100%;
-  padding: 0 3%;
-  height: 2.5vw;
-  line-height: 2.5vw;
-  border-radius: 5px;
-  border: 1px solid #616161;
-  margin: 0 0 0.8333333333333334vw;
-  font-size: calc(0.875rem + ((1vw - 13.6px) * 0.7143));
-
-  /* color: #000; */
-/* font-family: "ROBOTOLIGHT";
-  background-color: white;
-} */
-/* .savemain {
-  padding: 0 0 2.5vw;
-  margin: 0 auto;
-  width: 9.166666666666666vw;
-  clear: both;
-}
-.addBtn {
-  float: right;
-  padding: 0;
-  margin: 1.9791666666666665vw 0 0;
-  clear: both;
-}
-.addBtn button {
-  padding: 0;
-  margin: 0;
-  color: #28b5f4;
-  font-size: calc(1rem + ((1vw - 13.6px) * 0.8929));
-  font-family: "Roboto", sans-serif;
-  clear: both;
-  opacity: 0.5;
-}
-.saveBtn {
-  line-height: 2.5vw;
-  padding: 0 0 0 3.4895833333333335vw;
-  margin: 0 0 0 0;
-  text-align: left;
-  width: 9.166666666666666vw;
-  border-radius: 1.25vw;
-  font-size: calc(1rem + ((1vw - 13.6px) * 0.8929));
-  color: #fff;
-  font-family: "Roboto", sans-serif;
-  background: #28b5f4 url(../images/saveBtn.png) no-repeat 0.9375vw center;
-} 
-
-.nav-tabs .nav-item {
-  padding: 16px;
-}
-.styleChange {
-  background-color: white;
-  color: black;
-  border-left: white;
-}
-.changeWidth {
-  width: 90%;
-}*/
 
 .saveBtn {
   line-height: 2.5vw;
@@ -546,4 +428,48 @@
   background: url(../../images/saveBtn.33fc7b5f91c8d6406ad1.png) 0.9375vw center
     no-repeat #28b5f4;
   box-shadow: 0 2px 8px rgb(0 0 0 / 24%);
+}
+
+
+.round {
+  position: relative;
+}
+
+.round label {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 28px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 28px;
+}
+
+.round label:after {
+  border: 2px solid #fff;
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 6px;
+  left: 7px;
+  opacity: 0;
+  position: absolute;
+  top: 8px;
+  transform: rotate(-45deg);
+  width: 12px;
+}
+
+.round input[type="checkbox"] {
+  visibility: hidden;
+}
+
+.round input[type="checkbox"]:checked + label {
+  background-color: #66bb6a;
+  border-color: #66bb6a;
+}
+
+.round input[type="checkbox"]:checked + label:after {
+  opacity: 1;
 }
