--- a/pages/editProfile/editprofile.css
+++ b/pages/editProfile/editprofile.css
@@ -286,7 +286,7 @@
 .profile_cnt {
   padding: 0;
   margin: 0;
-  width: 94%;
+  width: 100%;
   box-shadow: 0px 8px 16px rgb(0 0 0 / 16%);
   background: #fff;
   border-radius: 1.0416666666666665vw;
@@ -312,7 +312,7 @@
   cursor: pointer;
   font-weight: normal;
   padding: 20px;
-  font-size: calc(0.875rem + ((1vw - 13.6px) * 0.7143));
+  /* font-size: calc(0.875rem + ((1vw - 13.6px) * 0.7143)); */
   border-bottom: 0;
   line-height: 1.25vw;
   margin: 0;
@@ -331,7 +331,7 @@
 }
 
 .area-work .search-input {
-  width: 25rem;
+  
   text-align: center;
   margin: auto;
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -516,4 +516,9 @@
 
 .round input[type="checkbox"]:checked + label:after {
   opacity: 1;
+}
+@media only screen and(max-width:600px){
+  .paragraph{
+margin: 10%;
+  }
 }
