--- a/pages/portfolio/portfolio.css
+++ b/pages/portfolio/portfolio.css
@@ -20,7 +20,7 @@
   .profile_cnt {
     padding: 0;
     margin: 0;
-    width: 94%;
+    width: 100%;
     box-shadow: 0px 8px 16px rgb(0 0 0 / 16%);
     background: #fff;
     border-radius: 1.0416666666666665vw;
@@ -40,7 +40,7 @@
     cursor: pointer;
     font-weight: normal;
     padding: 20px;
-    font-size: calc(0.875rem + ((1vw - 13.6px) * 0.7143));
+    /* font-size: calc(0.875rem + ((1vw - 13.6px) * 0.7143)); */
     border-bottom: 0;
     line-height: 1.25vw;
     margin: 0;
@@ -74,8 +74,54 @@
       margin-left: 33%;
     }
   }
+  @media only screen and (max-width: 600px) {
+    .mainform {
+      margin: 4%;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    .ssdesign1{
+      margin-left: 82%;
+    }
+  }
   
+  @media only screen and (max-width: 600px) {
+    .paragraph{
+      margin: 8%;
+    }
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .imgss{
+      padding: 2%;
+    }
+  }
  
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .container:hover .image {
+    opacity: 0.3;
+  }
+  
+  .container:hover .middle {
+    opacity: 1;
+  }
+  
+  .text2 {
+    background-color:lightcoral;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
   
   
   
